--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,7 +10,13 @@
     margin-bottom: 0;
     font-size: 12px;
     letter-spacing: 5px;
+    background-color: #e3f2fd;
 }
+
+.nav{
+    font-weight: bold;
+}
+
 .navbar-nav  li a:hover {
     color: #1abc9c !important;
 }
@@ -31,5 +37,5 @@
 .footer p {
 	margin-top: 25px;
 	font-size: 12px;
-  color: #fff;
+  color: #140101;
 }
