--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,17 +8,23 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="css/styles.css" />
-    <nav class="navbar navbar-default">
+    <link rel="stylesheet" href="/css/styles.css" />
+    <nav class="navbar navbar-default navbar-expand-lg">
       <div class="container">
         <div class="navbar-header">
           <p class="navbar-brand">DAILY JOURNAL</p>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <!-- 6 -->
-          <li id="home"><a href="#">HOME</a></li>
-          <li id="about"><a href="#">ABOUT US</a></li>
-          <li id="contact"><a href="#">CONTACT US</a></li>
+          <li id="home" class="nav-item">
+            <a class="nav-link" href="/">HOME</a>
+          </li>
+          <li id="about" class="nav-item">
+            <a class="nav-link" href="/about">ABOUT US</a>
+          </li>
+          <li id="contact" class="nav-item">
+            <a class="nav-link" href="/contact">CONTACT US</a>
+          </li>
         </ul>
       </div>
     </nav>
