fixed css style property for navbar heading

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,6 +17,11 @@
     font-weight: bold;
 }
 
+.navbar-brand:hover{
+    color: #1abc9c !important;
+    cursor: pointer;
+}
+
 .navbar-nav  li a:hover {
     color: #1abc9c !important;
 }
