added compose section and modified some code

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,17 @@
+html {
+    min-height: 100%;
+    position: relative;
+  }
+
+
 .container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
-}
+     /* margin: auto;
+    width: 80%; */
+ } 
+
+
 .navbar {
     padding-top: 15px;
     padding-bottom: 15px;
