modified compose section with added css and modified some bugs in code

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,14 @@ html {
     width: 80%; */
  } 
 
+ .w{
+    width: 85%;
+    margin: auto;
+ }
+
+ .ch{
+    margin-bottom: 0.8em;
+ }
 
 .navbar {
     padding-top: 15px;
