--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,8 @@
 <%- include( "partials/header"); -%>
 
-<h1>About</h1>
-<p><%= aboutContent %></p>
+<div class="w">
+  <h1>About</h1>
+  <p><%= aboutContent %></p>
+</div>
 
 <%- include( "partials/footer"); -%>
