--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,9 @@
 <%- include( "partials/header"); -%>
 
-<h1>Home</h1>
+<div class="w">
+  <h1>Home</h1>
 
-<p><%= homeStartingContent %></p>
+  <p><%= homeStartingContent %></p>
+</div>
 
 <%- include( "partials/footer"); -%>
