--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,11 @@
   <h1>Home</h1>
 
   <p><%= homeStartingContent %></p>
+
+  <% posts.forEach(function(post){ %>
+  <h1><%= post.title %></h1>
+  <p><%= post.content %></p>
+  <% }) %>
 </div>
 
 <%- include( "partials/footer"); -%>
