--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,10 +8,10 @@
   <% posts.forEach(function(post){ %>
   <h1><%= post.title %></h1>
   <p>
-    <%= post.content.substring(0,100) + "..." %>
-    <a href="/posts/<%= post.title %>">Read More</a>
+    <%= post.content %>
+    <a href="/posts/<%= post.title %>">Read More</a></p>
+    <% }) %>
   </p>
-  <% }) %>
 </div>
 
 <%- include( "partials/footer"); -%>
