--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,10 @@
   <% posts.forEach(function(post){ %>
   <h1><%= post.title %></h1>
   <p>
-    <%= post.content %>
+    <%= post.content.slice(0,100) + "..." %>
+    <!-- function truncate(str, length) {
+      return str.length > length ? str.substr(0, length) + "..." : str;
+    } -->
 
     <a href="/posts/<%= post._id %>">Read More</a>
   </p>
